src/snapshots/fuzz_crash/fuzz_crash_001.txt
~~~META
description=fuzz crash
type=file
~~~SOURCE
mo|%
~~~PROBLEMS
MISSING HEADER

The module header is missing.

mo|%
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

I didn't expect to see this in the pattern.

mo|%
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

Expected '|' in this expression.

mo|%
Note: This is a parse error. Check your syntax.
INVALID STATEMENT

This statement is not allowed at the top level.

mo|%
Only definitions, type annotations, and imports are allowed at the top level.
~~~TOKENS
LowerIdent(1:1-1:3),OpBar(1:3-1:4),OpPercent(1:4-1:5),EndOfFile(1:5-1:5),
~~~PARSE
(file (1:1-1:5)
	(malformed_header (1:1-1:3) "missing_header")
	(statements (malformed_expr (1:5-1:5) "expected_expr_bar")))
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END